--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
             </div>
             <div id="more" class="col-lg-6">
                 <h2>Who am I ?</h2>
-                <p class="text-jusitfy" id="ghaith">my name is Ghaith Alnamli,
+                <p class="text-jusitfy" id="ghaith">my name is Ghaith,
                     I am a student at Damascus University, faculty of ITE,
                 </p>
                 <h2><em>Roles :</em> </h2>
